--- a/src/app/client/profiles/payment-history/payment-history.component.html
+++ b/src/app/client/profiles/payment-history/payment-history.component.html
@@ -14,87 +14,33 @@
                         <ol class="breadcrumb">
                             <li class="breadcrumb-item"><a href="https://phongtro123.com/">Phongtro123.com</a></li>
                             <li class="breadcrumb-item"><a href="https://phongtro123.com/quan-ly/index.html">Quản lý</a></li>
-                            <li class="breadcrumb-item active" aria-current="page">Lịch sử nạp tiền</li>
+                            <li class="breadcrumb-item active" aria-current="page">Lịch sử thanh toán</li>
                         </ol>
                     </nav>
                     <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">
-                        <h1 class="h2">Lịch sử thanh toán tin</h1>
+                        <h1 class="h2">Lịch sử thanh toán</h1>
                     </div>
                     <div class="table-responsive">
-                        <table class="table table_listing table-striped table-bordered">
+                        <table class="table table-bordered table-striped" cellspacing="0" width="100%">
                             <thead>
                                 <tr>
-                                    <th>Thời gian</th>
-                                    <th>Loại hoạt động</th>
-                                    <th>Mã tin đăng</th>
-                                    <th>Loại tin</th>
-                                    <th>Phí</th>
-                                    <th>Trạng thái</th>
+                                    <th class="nowrap" [ngStyle]="{'text-align': 'center'}">Mã giao dịch</th>
+                                    <th class="nowrap" [ngStyle]="{'text-align': 'center'}">Ngày thanh toán</th>
+                                    <th class="nowrap" [ngStyle]="{'text-align': 'center'}">Phương thức</th>
+                                    <th class="nowrap" [ngStyle]="{'text-align': 'center'}">Số tiền</th>
+                                    <th class="nowrap" [ngStyle]="{'text-align': 'center'}">Nội dung</th>
+                                    <th class="nowrap" [ngStyle]="{'text-align': 'center'}">Trạng thái</th>
                                 </tr>
                             </thead>
                             <tbody>
-
-                                <tr>
-                                    <td>00:45 01/04/2021</td>
-                                    <td><span class="badge badge-primary" style="font-size: 0.8rem;">Đăng lại tin</span></td>
-                                    <td><a href="https://phongtro123.com/nha-tro-phuong-canh-gia-re-1tr2-30m2-pr312303.html">312303</a></td>
-                                    <td><span style="color:#E13427;">Tin VIP 1</span></td>
-                                    <td>90.000đ</td>
-                                    <td>Chưa thanh toán</td>
-                                </tr>
-
-                                <tr>
-                                    <td>00:02 01/04/2021</td>
-                                    <td><span class="badge badge-primary" style="font-size: 0.8rem;">Đăng lại tin</span></td>
-                                    <td><a href="https://phongtro123.com/nha-tro-phuong-canh-gia-re-1tr2-30m2-pr312303.html">312303</a></td>
-                                    <td><span style="color:#E13427;">Tin VIP 1</span></td>
-                                    <td>90.000đ</td>
-                                    <td>Chưa thanh toán</td>
-                                </tr>
-
-                                <tr>
-                                    <td>00:01 01/04/2021</td>
-                                    <td><span class="badge badge-primary" style="font-size: 0.8rem;">Đăng lại tin</span></td>
-                                    <td><a href="https://phongtro123.com/nha-tro-phuong-canh-gia-re-1tr2-30m2-pr312303.html">312303</a></td>
-                                    <td><span style="color:#055699;">Tin thường</span></td>
-                                    <td>10.000đ</td>
-                                    <td>Chưa thanh toán</td>
-                                </tr>
-
-                                <tr>
-                                    <td>23:58 31/03/2021</td>
-                                    <td><span class="badge badge-primary" style="font-size: 0.8rem;">Đăng lại tin</span></td>
-                                    <td><a href="https://phongtro123.com/nha-tro-phuong-canh-gia-re-1tr2-30m2-pr312303.html">312303</a></td>
-                                    <td><span style="color:#055699;">Tin thường</span></td>
-                                    <td>10.000đ</td>
-                                    <td>Chưa thanh toán</td>
-                                </tr>
-
-                                <tr>
-                                    <td>23:52 31/03/2021</td>
-                                    <td><span class="badge badge-primary" style="font-size: 0.8rem;">Đăng lại tin</span></td>
-                                    <td><a href="https://phongtro123.com/nha-tro-phuong-canh-gia-re-1tr2-30m2-pr312303.html">312303</a></td>
-                                    <td><span style="color:#055699;">Tin thường</span></td>
-                                    <td>10.000đ</td>
-                                    <td>Chưa thanh toán</td>
-                                </tr>
-
-                                <tr>
-                                    <td>23:49 31/03/2021</td>
-                                    <td><span class="badge badge-primary" style="font-size: 0.8rem;">Đăng lại tin</span></td>
-                                    <td><a href="https://phongtro123.com/nha-tro-phuong-canh-gia-re-1tr2-30m2-pr312303.html">312303</a></td>
-                                    <td><span style="color:#055699;">Tin thường</span></td>
-                                    <td>10.000đ</td>
-                                    <td>Chưa thanh toán</td>
-                                </tr>
-
-                                <tr>
-                                    <td>17:08 08/10/2020</td>
-                                    <td><span class="badge badge-success" style="font-size: 0.8rem;">Đăng tin mới</span></td>
-                                    <td><a href="https://phongtro123.com/nha-tro-phuong-canh-gia-re-1tr2-30m2-pr312303.html">312303</a></td>
-                                    <td><span style="color:#055699;">Tin thường</span></td>
-                                    <td>10.000đ</td>
-                                    <td>Thành công</td>
+                                <tr *ngFor="let payment of paymentHistory">
+                                    <td [ngStyle]="{'text-align': 'center'}">{{payment.transactionId}}</td>
+                                    <td [ngStyle]="{'text-align': 'center'}">{{payment.date}}</td>
+                                    <td [ngStyle]="{'text-align': 'center'}">Paypal</td>
+                                    <td [ngStyle]="{'text-align': 'center'}">{{payment.amount}}</td>
+                                    <td [ngStyle]="{'text-align': 'center'}">{{payment.description}}</td>
+                                    <td [ngStyle]="{'text-align': 'center'}"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-check-circle"
+                                        style="width: 16px; height: 16px; color: #28a745;"><path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"></path><polyline points="22 4 12 14.01 9 11.01"></polyline></svg></td>
                                 </tr>
                             </tbody>
                         </table>
