--- a/src/app/client/profiles/recharge-history/recharge-history.component.html
+++ b/src/app/client/profiles/recharge-history/recharge-history.component.html
@@ -26,12 +26,12 @@
                         <table class="table table-bordered table-striped" cellspacing="0" width="100%">
                             <thead>
                                 <tr>
-                                    <th class="nowrap">Mã giao dịch</th>
-                                    <th class="nowrap">Ngày nạp</th>
-                                    <th class="nowrap">Phương thức</th>
-                                    <th class="nowrap">Số tiền</th>
-                                    <th class="nowrap">Nội dung</th>
-                                    <th class="nowrap">Trạng thái</th>
+                                    <th class="nowrap" [ngStyle]="{'text-align': 'center'}">Mã giao dịch</th>
+                                    <th class="nowrap" [ngStyle]="{'text-align': 'center'}">Ngày nạp</th>
+                                    <th class="nowrap" [ngStyle]="{'text-align': 'center'}">Phương thức</th>
+                                    <th class="nowrap" [ngStyle]="{'text-align': 'center'}">Số tiền</th>
+                                    <th class="nowrap" [ngStyle]="{'text-align': 'center'}">Nội dung</th>
+                                    <th class="nowrap" [ngStyle]="{'text-align': 'center'}">Trạng thái</th>
                                 </tr>
                             </thead>
                             <tbody>
