--- a/src/app/admin/article-manager/view-article/view-article.component.html
+++ b/src/app/admin/article-manager/view-article/view-article.component.html
@@ -123,6 +123,9 @@
                                 </tr>
                             </tbody>
                         </table>
+
+                        <mat-slider min="1" max="100" step="1" value="1"></mat-slider>
+                        
                         <nav aria-label="Page navigation example">
                             <ul class="pagination">
                               <li class="page-item">
