--- a/src/app/client/clients-page/shared/header/header.component.html
+++ b/src/app/client/clients-page/shared/header/header.component.html
@@ -1,5 +1,5 @@
 
-        <div class="container container-header clearfix"><a id="top-logo" href="https://phongtro123.com/"
+        <div class="container container-header clearfix"><a id="top-logo" routerLink="/"
                 title="cho thuê phòng trọ, cho thuê nhà trọ, tìm phòng trọ">cho thuê phòng trọ, cho thuê nhà trọ, tìm
                 phòng trọ</a>
             <div class="user-welcome clearfix js-reload-html-header">
@@ -13,41 +13,45 @@
                     <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
                         <li>
                             <a class="dropdown-menu-item dang-tin" rel="nofollow"
-                                href="https://phongtro123.com/quan-ly/dang-tin-moi.html"
-                                title="Đăng tin cho thuê"><i></i> Đăng tin cho thuê
+                                routerLink="/profile/create-article"
+                                title="Đăng tin cho thuê"><i></i> 
+                                Đăng tin cho thuê
                             </a>
                         </li>
                         <li>
                             <a class="dropdown-menu-item quan-ly-tin-dang" rel="nofollow"
-                                href="https://phongtro123.com/quan-ly/tin-dang.html" title="Quản lý tin đăng"><i></i>
+                                routerLink="/profile/article-manager"
+                                title="Quản lý tin đăng"><i></i>
                                 Quản lý tin đăng
                             </a>
                         </li>
                         <li>
                             <a class="dropdown-menu-item nap-tien" rel="nofollow"
-                                href="https://phongtro123.com/quan-ly/nap-tien.html"><i></i> Nạp tiền
+                                routerLink="/profile/paypal-view"><i></i> 
+                                Nạp tiền
                             </a>
                         </li>
                         <li>
                             <a class="dropdown-menu-item lich-su-nap-tien" rel="nofollow"
-                                href="https://phongtro123.com/quan-ly/lich-su-nap-tien.html"><i></i> Lịch sử nạp
-                                tiền
+                                routerLink="/profile/recharge-history"><i></i> 
+                                Lịch sử nạp tiền
                             </a>
                         </li>
                         <li>
                             <a class="dropdown-menu-item thong-tin-ca-nhan" rel="nofollow"
-                                href="https://phongtro123.com/quan-ly/cap-nhat-thong-tin-ca-nhan.html"><i></i> Thông tin
-                                cá nhân
+                                routerLink="/profile/edit-profile"><i></i>
+                                Thông tin cá nhân
                             </a>
                         </li>
                         <li>
                             <a class="dropdown-menu-item tin-da-luu" rel="nofollow"
-                                href="https://phongtro123.com/tin-da-luu.html"><i></i> Tin đã lưu
+                                ><i></i> Tin đã lưu
                             </a>
                         </li>
-                        <li>
-                            <a class="dropdown-menu-item thoat" rel="nofollow" href="https://phongtro123.com/thoat"
-                                title="Thoát"><i></i> Thoát
+                        <li (click)="logout()">
+                            <a class="dropdown-menu-item thoat" rel="nofollow"
+                                title="Thoát"><i></i>
+                                Thoát
                             </a>
                         </li>
 
