handle Blog and structure header - sidebar of profile

--- a/src/app/client/profiles/edit-profile/edit-profile.component.html
+++ b/src/app/client/profiles/edit-profile/edit-profile.component.html
@@ -1,9 +1,11 @@
 <div class="desktop dashboard quan-ly nap-tien the-tin-dung loaded ready">
     <div id="webpage">
         <!-- Header -->
+        <app-header></app-header>
         <div class="container-fluid">
             <div class="row">
                 <!-- Sidebar -->
+                <app-sidebar></app-sidebar>
                 <main role="main" class="ml-sm-auto col-lg-10">
                     <div class="user_quick_info js-mobile-user-quick-info">
                         <p style="margin-top: 0; margin-bottom: 5px;">Xin chào <strong>Thanh Bình</strong>. Mã tài khoản: <strong>99624</strong></p>
