--- a/src/app/client/profiles/paypal/view-paypal/view-paypal.component.html
+++ b/src/app/client/profiles/paypal/view-paypal/view-paypal.component.html
@@ -1,5 +1,12 @@
+<div class="desktop dashboard quan-ly nap-tien the-tin-dung loaded ready">
+    <div id="webpage">
+        <!-- Header -->
+        <app-header></app-header>
+        <div class="container-fluid">
+            <div class="row">
+                <!-- Sidebar -->
+                <app-sidebar></app-sidebar>
 <main role="main" class="ml-sm-auto col-lg-10">
-
     <div class="user_quick_info js-mobile-user-quick-info">
         <p style="margin-top: 0; margin-bottom: 5px;">Xin chào <strong>Nguyễn Thanh Hiệp</strong>. Mã tài khoản: <strong>99624</strong></p>
         <p style="margin-bottom: 0;">Số dư TK của bạn là: <strong>0 đ</strong></p>
@@ -56,7 +63,7 @@
             
             <div class="col-md-4">
                 <div class="method_item">
-                    <a routerLink="/client/profile/paypal-handle">
+                    <a routerLink="/profile/paypal-handle">
                         <div class="method_item_icon">
                             <img src="https://phongtro123.com/images/credit-card.png" alt="Nạp tiền bằng thẻ tín dụng quốc tế" title="Nạp tiền bằng thẻ tín dụng quốc tế">
                         </div>
@@ -270,3 +277,7 @@
                     </div>
                 </footer>
             </main>
+        </div>
+    </div>
+</div>
+</div>
