--- a/src/app/client/profiles/shared/header/header.component.html
+++ b/src/app/client/profiles/shared/header/header.component.html
@@ -1,5 +1,5 @@
-<div class="desktop dashboard quan-ly nap-tien the-tin-dung loaded ready">
-    <div id="webpage">
+<!-- <div class="desktop dashboard quan-ly nap-tien the-tin-dung loaded ready">
+    <div id="webpage"> -->
         <nav class="navbar navbar-expand-md fixed-top flex-md-nowrap p-0" id="mobile_navbar_top">
             <a class="navbar-brand col-sm-3 col-md-2 mr-0" routerLink="/client/home">ThanhBinh.com</a>
             <div class="collapse navbar-collapse" id="navbarCollapse">
@@ -30,5 +30,5 @@
                 </ul>
             </div>
         </nav>
-    </div>
-</div>
+    <!-- </div>
+</div> -->
