--- a/src/app/client/profiles/article-manager/article-manager.component.html
+++ b/src/app/client/profiles/article-manager/article-manager.component.html
@@ -1,9 +1,11 @@
 <div class="desktop dashboard quan-ly nap-tien the-tin-dung loaded ready">
     <div id="webpage">
         <!-- Header -->
+        <app-header></app-header>
         <div class="container-fluid">
             <div class="row">
                 <!-- Sidebar -->
+                <app-sidebar></app-sidebar>
                 <main role="main" class="ml-sm-auto col-lg-10">
                     <div class="user_quick_info js-mobile-user-quick-info">
                         <p style="margin-top: 0; margin-bottom: 5px;">Xin chào <strong>Phạm Thanh Bình</strong>. Mã tài khoản: <strong>99624</strong></p>
@@ -109,18 +111,18 @@
                                 <div class="list-support-title">Liên hệ với chúng tôi nếu bạn cần hỗ trợ:</div>
                                 <div class="support-item">
                                     <span class="support-item-title">Hỗ trợ thanh toán</span>
-                                    <a rel="nofollow" href="tel:0917686101">Điện thoại: 0917686101</a>
-                                    <a rel="nofollow" target="_blank" href="https://zalo.me/0917686101">Zalo: 0917686101</a>
+                                    <a rel="nofollow" href="tel:0973800896">Điện thoại: 0973800896</a>
+                                    <a rel="nofollow" target="_blank" href="https://zalo.me/0973800896">Zalo: 0973800896</a>
                                 </div>
                                 <div class="support-item">
                                     <span class="support-item-title">Hỗ trợ đăng tin</span>
-                                    <a rel="nofollow" href="tel:0902657123">Điện thoại: 0902657123</a>
-                                    <a rel="nofollow" target="_blank" href="https://zalo.me/0902657123">Zalo: 0902657123</a>
+                                    <a rel="nofollow" href="tel:0973800896">Điện thoại: 0973800896</a>
+                                    <a rel="nofollow" target="_blank" href="https://zalo.me/0973800896">Zalo: 0973800896</a>
                                 </div>
                                 <div class="support-item">
                                     <span class="support-item-title">Hotline 24/7</span>
-                                    <a rel="nofollow" href="tel:0917686101">Điện thoại: 0917686101</a>
-                                    <a rel="nofollow" target="_blank" href="https://zalo.me/0917686101">Zalo: 0917686101</a>
+                                    <a rel="nofollow" href="tel:0973800896">Điện thoại: 0973800896</a>
+                                    <a rel="nofollow" target="_blank" href="https://zalo.me/0973800896">Zalo: 0973800896</a>
                                 </div>
                                 <a class="btn btn-page-contact" rel="nofollow" href="https://phongtro123.com/lien-he">Gửi liên hệ</a>
                             </div>
