--- a/src/app/client/clients-page/client-home/client-home.component.html
+++ b/src/app/client/clients-page/client-home/client-home.component.html
@@ -2,11 +2,9 @@
     <div id="webpage">
         <!-- Header -->
         <app-header></app-header>
-        
         <main id="main">
-            
+            <!-- SearchBar -->
             <app-searchbar></app-searchbar>
-
             <header class="page-header welcome">
                 <h1 class="page-h1">Cho thuê phòng trọ, cho thuê nhà trọ, tìm phòng trọ</h1>
                 <p class="page-description">Cho thuê phòng trọ, nhà trọ số 1 Việt Nam - Website đăng tin cho thuê phòng
