--- a/src/app/client/clients-page/shared/searchbar/searchbar.component.html
+++ b/src/app/client/clients-page/shared/searchbar/searchbar.component.html
@@ -1,26 +1,19 @@
 <div id="searchbar">
     <div class="container">
-        <form role="search" method="POST" id="searchformTop" class="searchform js-form-submit-data"
-            data-action-url="https://phongtro123.com/api/search" novalidate="novalidate">
+        <form id="searchformTop" class="searchform js-form-submit-data">
             <div class="search_field">
                 <div class="clearfix">
-
                     <div class="search_field_item search_field_item_loaitin">
                         <label class="search_field_item_label">Loại tin</label>
-                        <select id="search_room_type" class="form-control js_select2_room_type" name="type">
+                        <select id="search_room_type" class="form-control js_select2_room_type" (change)="getTypeRoomId($event.target.value)">
                             <option value="1">Phòng trọ, nhà trọ</option>
-                            <option value="2">Nhà thuê nguyên căn</option>
-                            <option value="3">Cho thuê căn hộ</option>
-                            <option value="6">Cho thuê căn hộ mini</option>
-                            <option value="7">Cho thuê căn hộ dịch vụ</option>
-                            <option value="4">Tìm người ở ghép</option>
-                            <option value="5">Cho thuê mặt bằng</option>
+                            <option value="2">Tìm người ở ghép</option>
                         </select>
                     </div>
 
                     <div class="search_field_item search_field_item_tinhthanh">
                         <label class="search_field_item_label">Tỉnh thành</label>
-                        <select id="search_city" class="form-control tinh-tp" (change)="getAllDistrictByCityId($event.target.value)">
+                        <select id="search_city" class="form-control tinh-tp" name="city" (change)="getAllDistrictByCityId($event.target.value)">
                             <option value="0">Tất cả</option>
                             <option *ngFor="let city of citys" value="{{city.id}}">{{city.name}}</option>
                         </select>
@@ -28,7 +21,7 @@
 
                     <div class="search_field_item search_field_item_quanhuyen">
                         <label class="search_field_item_label">Quận huyện</label>
-                        <select class="form-control js_select2_quanhuyen" name="quan" (change)="getAllWardByDistrictId($event.target.value)">
+                        <select class="form-control js_select2_quanhuyen" name="district" (change)="getAllWardByDistrictId($event.target.value)">
                             <option value="0">Tất cả</option>
                             <option *ngFor="let district of districts" value="{{district.id}}">{{district.name}}</option>
                         </select>
@@ -36,15 +29,15 @@
 
                     <div class="search_field_item search_field_item_duongpho">
                         <label class="search_field_item_label">Đường phố</label>
-                        <select name="duong" class="form-control js_select2_duongpho">
+                        <select name="ward" class="form-control js_select2_duongpho" (change)="getWardById($event.target.value)">
                             <option value="0">Tất cả</option>
-                            <option *ngFor="let ward of wards">{{ward.name}}</option>
+                            <option *ngFor="let ward of wards" value="{{ward.id}}">{{ward.name}}</option>
                         </select>
                     </div>
 
                     <div class="search_field_item search_field_item_mucgia">
                         <label class="search_field_item_label">Khoảng giá</label>
-                        <select class="form-control price js_select2_price" name="gia">
+                        <select class="form-control price js_select2_price" name="price">
                             <option value="0" selected="">Chọn mức giá</option>
                             <option value="1">Dưới 1 triệu</option>
                             <option value="2">1 triệu - 2 triệu</option>
@@ -59,7 +52,7 @@
                         
                     <div class="search_field_item search_field_item_dientich"><label
                             class="search_field_item_label">Diện tích</label><select id="search_dientich"
-                            name="dt" class="form-control js_select2_acreage">
+                            name="acreage" class="form-control js_select2_acreage">
                             <option value="0" selected="">Chọn diện tích</option>
                             <option value="1">Dưới 20 m2</option>
                             <option value="2">20 - 30 m2</option>
@@ -75,7 +68,8 @@
 
                     <div class="search_field_item search_field_item_submit">
                         <label class="search_field_item_label">&nbsp;</label>
-                        <button type="submit" class="btn btn-default btn_search_box"> Lọc tin </button>
+                        <a class="btn btn-default btn_search_box" (click)="onFilter()" 
+                            href="{{href}}"> Lọc tin </a>
                     </div>
                 </div>
             </div>
