--- a/src/app/client/profiles/shared/sidebar/sidebar.component.html
+++ b/src/app/client/profiles/shared/sidebar/sidebar.component.html
@@ -4,8 +4,11 @@
             <div class="row">
                 <nav class="col-lg-2 d-none d-lg-block bg-light sidebar">
                     <div class="user_info">
-                        <a href="https://phongtro123.com/quan-ly/nap-tien/the-tin-dung.html?fbclid=IwAR0QldxYF6C0N-tOhI1NPYCBPkHUpGQmrKTLG-Sk66SKQno0aDSUc0I-aXY#" class="clearfix">
-                            <div class="user_avatar"><img src="assets/admin/img/Avarta-min.jpg"></div>
+                        <a routerLink="/profile/edit-profile" class="clearfix">
+                            <div class="user_avatar" >
+                                <img *ngIf="customerModel?.image == null || customerModel?.image == ''" src="https://cdn.pixabay.com/photo/2016/08/08/09/17/avatar-1577909_1280.png">
+                                <img *ngIf="customerModel?.image !== null || customerModel?.image !== ''" src="{{customerModel?.image}}">
+                            </div>
                             <div class="user_meta">
                                 <div class="inner">
                                     <div class="user_name">{{customerModel?.name}}</div>
